--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
 	"license":      "ISC",
 	"engines":      {"node": ">=6"},
 	"dependencies": {
-		"esprima": "^2.7.2",
-		"lodash.uniq": "^4.5",
-		"estools": "^2.2"
+		"astw": "^2",
+		"falafel": "^1.2"
 	}
 }
