--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name":         "inspect-code",
-	"description":  "Run code and get the value of every expressions.",
+	"description":  "Run code and get the value of every expression.",
 	"version":      "0.1.0",
 	"main":         "index.js",
 	"files":        ["index.js"],
@@ -14,7 +14,7 @@
 	"license":      "ISC",
 	"engines":      {"node": ">=6"},
 	"dependencies": {
-		"javascript-idents": "sourcegraph/javascript-idents",
+		"javascript-idents": "^1.0.0",
 		"acorn": "^4.0.3",
 		"falafel": "^2",
 		"stack-trace": "^0.0.9"
