--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
 	"devDependencies": {
 		"tape": "^4.6",
 		"tap-min": "^1.1",
-		"is-roughly-equal": "^0.1"
+		"is-roughly-equal": "^0.1",
+		"benchmark": "^2.1.1"
 	},
 	"scripts": {
 		"test": "node test.js | tap-min",
-		"prepublish": "npm test"
+		"prepublish": "npm test",
+		"benchmark": "node benchmark.js"
 	}
 }
