--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 		"acorn": "^4.0.3",
 		"escodegen": "^1.8.1",
 		"estraverse": "^4.2",
-		"stack-trace": "^0.0.9"
+		"stack-trace": "^0.0.9",
+		"lolex": "^1.5.2"
 	},
 	"devDependencies": {
 		"tape": "^4.6",
